# decomp.me

./: .cfignore  .editorconfig  .env  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  .reviewdog.yml  CHANGELOG.md  DOCKER.md  README.md  biome.json  config-overrides.js  db.json  deploy.py  docker-compose.build.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-platform-template.yaml  netlify.toml  package.json  platform.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.github/: CODEOWNERS  (+1 more)
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  db.json  db_housekeeping.py  docker.dev.env  docker_entrypoint.sh  docker_prod_entrypoint.sh  dumpdb.sh  housekeeping.py  manage.py  mypy.ini  package.json  pyproject.toml  requirements.txt  runserver.sh
backend/api/: schema.yml
backend/asm-differ/: .gitrepo
backend/asm_differ/: .gitrepo  README.md  diff.py
backend/compilers/: .gitignore  clang.sh  compilers.darwin.yaml  compilers.linux.yaml  download.py  download.sh  mwcc.sh  mwccarm.sh  mwccppc.sh
backend/compilers/agbcc/: config.json
backend/compilers/agbccpp/: config.json
backend/compilers/clang-3.9.1/: config.json
backend/compilers/clang-4.0.1/: config.json
backend/compilers/dummy/: config.json
backend/compilers/ee-gcc2.96/: config.json
backend/compilers/gcc2.6.3-mipsel/: config.json
backend/compilers/gcc2.7kmc/: config.json
backend/compilers/gcc2.8.1/: as  config.json
backend/compilers/ido5.3/: .gitignore  config.json
backend/compilers/ido5.3/usr/lib/: as1  cfe  ugen  uopt
backend/compilers/ido7.1/: config.json
backend/compilers/mwcc1.0/: config.json
backend/compilers/mwcc_20_84/: config.json
backend/compilers/mwcc_233_163e/: config.json
backend/compilers/mwcc_247_108/: config.json
backend/compilers/mwcc_247_92/: config.json
backend/compilers/mwcc_43_213/: config.json
backend/compilers/psyq4.1/: config.json
backend/compilers/psyq4.3/: config.json
backend/compilers/psyq4.6/: config.json
backend/coreapp/: admin.py  apps.py  asm_diff_wrapper.py  compiler_utils.py  compiler_wrapper.py  compilers.py  compilerwrapper.py  context.py  cromper_client.py  decompiler_wrapper.py  decompilers.py  diff_wrapper.py  error.py  flags.py  github.py  housekeeping.py  libraries.py  m2c_wrapper.py  middleware.py  models.py  pagination.py  platforms.py  registry.py  sandbox.py  sandbox_wrapper.py  serializers.py  symbol_addrs.py  tests.py  urls.py  urls_api.py  util.py  views.py  worker.py  wrapper_result.py
backend/coreapp/asm_preludes/: gc_wii.s  irix.s  macosx.s  nds_arm9.s  ps1.s  ps2.s  psp.s
backend/coreapp/decorators/: __init__.py  cache.py  django.py  last_modified.py
backend/coreapp/filters/: scratch.py  search.py
backend/coreapp/migrations/: 0001_initial.py  0002_function_name.py  0002_remove_assembly_as_opts.py  0002_rename_compiler_assembly_arch.py  0003_alter_compilation_compiler.py  0003_auto_20210702_1438.py  0003_auto_20210827_1727.py  0003_github_profile.py  0003_profile_github.py  0004_auto_20210702_1441.py  0004_auto_20210823_2004.py  0004_auto_20210827_1847.py  0004_auto_20210831_1811.py  0004_scratch_diff_label.py  0005_alter_profile_github_load_time.py  0005_auto_20210704_0009.py  0005_auto_20210825_0421.py  0005_scratch_arch.py  0006_auto_20210705_1531.py  0006_scratch_name_score_description.py  0007_auto_20210705_1533.py  0007_rename_arch_scratch_platform.py  0008_delete_compilerconfiguration.py  0008_scratch_max_score.py  0008_scratch_max_score_squashed_0011_alter_scratch_compiler.py  0009_compilerconfiguration.py  0009_remove_crud_from_compilation.py  0009_remove_scratch_original_context.py  0010_auto_20210705_1616.py  0010_auto_20211023_1857.py  0010_delete_compilation.py  0011_alter_scratch_diff_label.py  0011_alter_scratch_parent.py  0012_alter_scratch_name.py  0012_alter_scratch_owner.py  0012_finishedtraining.py  0013_auto_20210705_1632.py  0013_scratch_name_default.py  0014_auto_20210705_2217.py  0014_projects.py  (+94 more)
backend/coreapp/models/: best_fork.py  box.py  comment.py  course.py  cow.py  github.py  preset.py  profile.py  project.py  pseudonym_data.json  scratch.py
backend/coreapp/static/: main.css
backend/coreapp/templates/: base_generic.html  index_nologin.html
backend/coreapp/templates/coreapp/: scratch.html
backend/coreapp/templatetags/: icon.py
backend/coreapp/tests/: common.py  mock_cromper_client.py  test_best_fork.py  test_comment.py  test_compilation.py  test_decompilation.py  test_housekeeping.py  test_platform.py  test_preset.py  test_project.py  test_request.py  test_scratch.py  test_search.py  test_user.py
backend/coreapp/views/: comment.py  compiler.py  compilers.py  cromper.py  decompile.py  decompiler.py  health.py  libraries.py  library.py  platform.py  preset.py  project.py  register.py  scratch.py  scratch_count.py  search.py  stats.py  user.py
backend/coreapp/views/public/: index.py
backend/decompme/: asgi.py  settings.py  urls.py  wsgi.py
backend/libraries/: download.py  libraries.yaml
backend/m2c/: .gitrepo
backend/mips_to_c/: .gitrepo
cromper/: .dockerignore  .env  Dockerfile  Dockerfile.prod  README.md  conftest.py  docker_entrypoint.sh  pyproject.toml  start.sh  test.py  test_integration.py
cromper/asm_preludes/: gba.s  nds_arm9.s  ps1.s  ps2.s  psp.s
cromper/compilers/: .gitignore  compilers.linux.yaml  download.py
cromper/cromper/: compiler_wrapper.py  compilers.py  config.py  decompiler_wrapper.py  diff_wrapper.py  error.py  flags.py  libraries.py  m2c_wrapper.py  main.py  platforms.py  sandbox.py  util.py
cromper/cromper/handlers/: assemble.py  compile.py  decompile.py  diff.py  handlers.py
cromper/cromper/wine/: README.md  msvc80.reg
cromper/cromper/wrappers/: compiler_wrapper.py  decompiler_wrapper.py  diff_wrapper.py  m2c_wrapper.py
cromper/tests/: common.py  test_api.py  test_compilation.py  test_decompilation.py
integration_tests/: .gitignore  README.md  conftest.py  example-github-workflow.yml  pyproject.toml  run_tests.sh  test_preset.py  test_scratch.py  test_scratch_compilation.py
(+716 files in other folders)
