[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Decomp.me team"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "asm-differ @ git+https://github.com/simonlindholm/asm-differ.git",
    "m2c @ git+https://github.com/matt-kempster/m2c.git",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.6.0",
    "django-environ>=0.13.0",
    "django-filter>=24.3",
    "django-resized>=1.0.3",
    "django-session-timeout>=0.1.0",
    "django-stubs-ext>=5.2.9",
    "django==5.2.11",
    "djangorestframework>=3.15.2",
    "drf-extensions>=0.7.1",
    "gunicorn>=25.1.0",
    "html-json-forms>=1.1.1",
    "itsdangerous==2.2.0",
    "parameterized>=0.9.0",
    "Pillow==12.1.1",
    "psycopg2-binary>=2.9.10",
    "PyGithub>=2.5.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.3",
    "responses==0.26.0",
    "sentry-sdk>=2.53.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "django-stubs>=5.2.9",
    "djangorestframework-stubs>=3.16.8",
    "mypy>=1.19.1",
    "ruff>=0.15.2",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["coreapp", "decompme"]

[tool.ruff]
include = ["coreapp/**/*.py", "decompme/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["decomp"]
combine-as-imports = true
