[tool.poetry]
name = "cromper"
version = "0.1.0"
description = "Async compilation and assembly service for decomp.me"
authors = ["Decomp.me team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tornado = "^6.5.2"
requests = "^2.32.5"
python-dotenv = "^1.0.0"
m2c = {git="https://github.com/matt-kempster/m2c.git"}
asm-differ = {git="https://github.com/simonlindholm/asm-differ.git"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-tornado = "^0.8.1"
ruff = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
